syntax = "proto3";

package ethereum.beacon.rpc.v1;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

// Health service API
//
// The health service is able to return important metadata about a beacon node
// such being able to stream logs via gRPC.
service Health {
    rpc StreamBeaconLogs(google.protobuf.Empty) returns (stream LogsResponse) {
        option (google.api.http) = {
            get: "/prysm/v1alpha1/health/logs/stream"
        };
    }
}

message LogsResponse {
  repeated string logs = 1;
}
